# wechat_auto

./: .gitignore  README.md  pyproject.toml  wechat_auto_v3.0.py  微信视觉群发助手_v3.jsx
desktop/: main.js  package-lock.json  package.json  preload.js  python-manager.js
docs/: CONVENTIONS.md  ISSUES.md  STARTUP.md  TASKS.md
engine/: __init__.py  main.py
engine/adapters/: __init__.py  handlers.py  serializers.py  ws_server.py
engine/application/: __init__.py  batch_creator.py  event_bus.py  queue_runner.py  scheduler.py  task_manager.py
engine/domain/: __init__.py  events.py  interfaces.py  models.py
engine/infrastructure/: __init__.py  attachment_manager.py
engine/infrastructure/automation/: __init__.py  clipboard.py  input.py  vision.py  wechat_platform.py  window_manager.py
engine/infrastructure/platform/: __init__.py  base.py  windows.py
engine/infrastructure/storage/: __init__.py  file_store.py  sqlite_repo.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/create/: CreatePage.tsx
ui/src/components/settings/: SettingsPage.tsx
ui/src/components/shared/: ContentPreview.tsx  ToggleSwitch.tsx
ui/src/components/tasks/: EditTaskDialog.tsx  TaskCard.tsx  TasksPage.tsx
ui/src/hooks/: useConfig.ts  useTasks.ts  useWebSocket.ts
ui/src/services/: api.ts
ui/src/store/: appStore.ts
ui/src/types/: models.ts
